catkin_ws/logs/frontend/build.make.126.log.stderr
In file included from /usr/include/c++/4.8/backward/strstream:51:0,
                 from /usr/include/vtk-5.8/vtkIOStream.h:112,
                 from /usr/include/vtk-5.8/vtkSystemIncludes.h:40,
                 from /usr/include/vtk-5.8/vtkIndent.h:24,
                 from /usr/include/vtk-5.8/vtkObjectBase.h:43,
                 from /usr/include/vtk-5.8/vtkSmartPointerBase.h:26,
                 from /usr/include/vtk-5.8/vtkSmartPointer.h:23,
                 from /usr/include/pcl-1.7/pcl/visualization/point_cloud_geometry_handlers.h:48,
                 from /usr/include/pcl-1.7/pcl/visualization/point_cloud_handlers.h:41,
                 from /usr/include/pcl-1.7/pcl/visualization/common/actor_map.h:40,
                 from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:48,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/PointCloudMap.h:10,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp:10:
/usr/include/c++/4.8/backward/backward_warning.h:32:2: warning: #warning This file includes at least one deprecated or antiquated header which may be removed without further notice at a future date. Please use a non-deprecated interface with equivalent functionality instead. For a listing of replacement headers and interfaces, consult the file backward_warning.h. To disable this warning use -Wno-deprecated. [-Wcpp]
 #warning \
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp: In member function ‘void SLAM::PointCloudMap::updateMap()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp:78:53: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for(int id = 0; id < pointCloudLocationInMap.size(); ++id)
                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp: In member function ‘virtual void SLAM::PointCloudMap::startMapViewer()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp:100:2: error: ‘viewer’ was not declared in this scope
  viewer = pcl::visualization::PCLVisualizer::Ptr(new pcl::visualization::PCLVisualizer("Point Cloud Map"));
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp: In member function ‘virtual void SLAM::PointCloudMap::stopMapViewer()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp:114:5: error: ‘viewer’ was not declared in this scope
  if(viewer) viewer->close();
     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp: In member function ‘virtual void SLAM::PointCloudMap::updateMapViewer()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp:119:5: error: ‘viewer’ was not declared in this scope
  if(viewer)
     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp: In member function ‘virtual void SLAM::PointCloudMap::showMap()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/PointCloudMap.cpp:130:5: error: ‘viewer’ was not declared in this scope
  if(viewer)
     ^
make[2]: *** [CMakeFiles/SLAM.dir/src/PointCloudMap.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
